@@ -1544,9 +1544,6 @@ name|shouldCache
 parameter_list|(
 name|Query
 name|query
-parameter_list|,
-name|LeafReaderContext
-name|context
 parameter_list|)
 throws|throws
 name|IOException
