@@ -26,20 +26,6 @@ name|lucene
 operator|.
 name|document
 operator|.
-name|Document
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|document
-operator|.
 name|IntPoint
 import|;
 end_import
@@ -54,91 +40,7 @@ name|lucene
 operator|.
 name|index
 operator|.
-name|DirectoryReader
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexReader
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexWriter
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexWriterConfig
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|MultiReader
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
 name|Term
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|Directory
 import|;
 end_import
 
@@ -275,46 +177,6 @@ name|q
 argument_list|)
 expr_stmt|;
 block|}
-name|Directory
-name|dir
-init|=
-name|newDirectory
-argument_list|()
-decl_stmt|;
-name|IndexWriter
-name|w
-init|=
-operator|new
-name|IndexWriter
-argument_list|(
-name|dir
-argument_list|,
-operator|new
-name|IndexWriterConfig
-argument_list|(
-literal|null
-argument_list|)
-argument_list|)
-decl_stmt|;
-name|w
-operator|.
-name|addDocument
-argument_list|(
-operator|new
-name|Document
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|IndexReader
-name|r
-init|=
-name|DirectoryReader
-operator|.
-name|open
-argument_list|(
-name|w
-argument_list|)
-decl_stmt|;
 name|assertFalse
 argument_list|(
 name|policy
@@ -322,31 +184,8 @@ operator|.
 name|shouldCache
 argument_list|(
 name|q
-argument_list|,
-name|getOnlyLeafReader
-argument_list|(
-name|r
-argument_list|)
-operator|.
-name|getContext
-argument_list|()
 argument_list|)
 argument_list|)
-expr_stmt|;
-name|r
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|w
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|dir
-operator|.
-name|close
-argument_list|()
 expr_stmt|;
 block|}
 block|}
