@@ -2744,81 +2744,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|Directory
-name|dir
-init|=
-name|newDirectory
-argument_list|()
-decl_stmt|;
-name|IndexWriterConfig
-name|iwc
-init|=
-name|newIndexWriterConfig
-argument_list|()
-decl_stmt|;
-name|IndexWriter
-name|w
-init|=
-operator|new
-name|IndexWriter
-argument_list|(
-name|dir
-argument_list|,
-name|iwc
-argument_list|)
-decl_stmt|;
-name|Document
-name|doc
-init|=
-operator|new
-name|Document
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-literal|10000
-condition|;
-operator|++
-name|i
-control|)
-block|{
-name|w
-operator|.
-name|addDocument
-argument_list|(
-name|doc
-argument_list|)
-expr_stmt|;
-block|}
-name|w
-operator|.
-name|forceMerge
-argument_list|(
-literal|1
-argument_list|)
-expr_stmt|;
-name|DirectoryReader
-name|reader
-init|=
-name|DirectoryReader
-operator|.
-name|open
-argument_list|(
-name|w
-argument_list|)
-decl_stmt|;
-name|w
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
 name|TermsQuery
 name|query
 init|=
@@ -2856,14 +2781,6 @@ operator|.
 name|shouldCache
 argument_list|(
 name|query
-argument_list|,
-name|getOnlyLeafReader
-argument_list|(
-name|reader
-argument_list|)
-operator|.
-name|getContext
-argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2889,26 +2806,8 @@ operator|.
 name|shouldCache
 argument_list|(
 name|query
-argument_list|,
-name|getOnlyLeafReader
-argument_list|(
-name|reader
-argument_list|)
-operator|.
-name|getContext
-argument_list|()
 argument_list|)
 argument_list|)
-expr_stmt|;
-name|reader
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|dir
-operator|.
-name|close
-argument_list|()
 expr_stmt|;
 block|}
 block|}
